Readme / DirectLogin disable one test